# contract-review-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  contracts.py  demo_api_test.py  graders.py  inference.py  inference_full_output.txt  inference_output.txt  models.py  openenv.yaml  output.txt  play_demo.py  pyproject.toml  run_tests.py
server/: Dockerfile  app.py  environment.py
