[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-env"
version = "1.0.0"
description = "OpenEnv environment for contract review, risk assessment, and negotiation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "praasukjain"},
]
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "contract_review_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["contract_review_env", "contract_review_env.server"]
package-dir = { "contract_review_env" = ".", "contract_review_env.server" = "server" }
